--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vite": "^5.0.10"
   },
   "dependencies": {
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
